# raft

./: Cargo.toml  README.md  TODO  rustfmt.toml
examples/: simulation.rs
src/: actor.rs  candidate.rs  client.rs  common.rs  common_message_handling.rs  common_state.rs  config.rs  follower.rs  leader.rs  lib.rs  log.rs  main.rs  message_handling.rs  messages.rs  node.rs  prelude.rs  server.rs  state_machine.rs  types.rs  util.rs
src/leader/: peer_state.rs
src/messages/: add_peer.rs  append_entries.rs  append_entries_client.rs  poll_state.rs  request_vote.rs
src/raft/: actor.rs  candidate.rs  common_state.rs  config.rs  follower.rs  leader.rs  messages.rs  mod.rs  model.rs  raft.rs
tests/: chaos_test.rs  deposed_leader.rs  dropped_messages_replication.rs  election_timeout.rs  leader_election.rs  message_forwarder.rs  mod.rs  simple_replication.rs  test_state_machine.rs
