[package]
name = "oxidized_float"
version = "0.1.0"
edition = "2021"    # this cargo's edition, not the project's

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actum = { git = "https://github.com/andreastedile/actum.git", rev="1f16959a66f4278eed5eb84febcd74f35214da39" }
rand = "0.8.4"
futures = "0.3.30"
tracing = { version = "0.1.40", features = ["attributes"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
either = "1.13.0"
futures-channel = "0.3.31"
assert_matches = "1.5.0"